# document-management-system

./: .dockerignore  .gitignore  API.md  COMPONENT_IMPORTS_FIX.md  ONLYOFFICE_JWT_SETUP.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
server/: .env.exp  Cargo.toml  Dockerfile  README.md
server/migrations/20251028163617_create_users/: up.sql
server/migrations/20251028163618_create_documents/: down.sql  up.sql
server/migrations/20251028163619_create_permissions/: down.sql  up.sql
server/src/: config.rs  db.rs  error.rs  main.rs  schema.rs
server/src/handlers/: auth.rs  document.rs  mod.rs  onlyoffice.rs  permission.rs  search.rs
server/src/middleware/: auth.rs  mod.rs
server/src/models/: document.rs  mod.rs  permission.rs  user.rs
server/src/routes/: mod.rs
server/src/services/: mod.rs  onlyoffice.rs  permission.rs  search.rs  storage.rs
server/src/utils/: jwt.rs  mod.rs  password.rs
web/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.vue
web/src/api/: auth.ts  documents.ts  folders.ts  index.ts  onlyoffice.ts  permissions.ts  search.ts
web/src/components/: CreateDocumentDialog.vue  PermissionDialog.vue  ShareDialog.vue  VersionHistoryDialog.vue
web/src/router/: index.ts
web/src/stores/: document.ts  user.ts
web/src/types/: index.ts
web/src/utils/: request.ts
web/src/views/: DocumentDetailView.vue  DocumentsView.vue  EditorView.vue  HomeView.vue  LayoutView.vue  LoginView.vue  ProfileView.vue  RegisterView.vue  SearchView.vue  ShareAccessView.vue  SharedView.vue
