[package]
name = "document-management-system"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Database
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = "2.1"

# Async Diesel
deadpool = "0.11"
deadpool-diesel = { version = "0.5", features = ["postgres"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Environment & Config
dotenv = "0.15"
config = "0.14"

# Authentication & Security
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1.10", features = ["serde", "v4"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# MinIO S3 - Using opendal (unified data access layer)
opendal = { version = "0.51", features = ["services-s3", "layers-tracing"] }

# MeiliSearch
meilisearch-sdk = "0.27"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Async
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

